[package]
name = "cwim"
version = "0.1.0"
authors = ["spencerwooo <spencerwoo98@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
failure = "0.1.6"
exitfailure = "0.5.1"
regex = "1"
unicode-segmentation = "1.3.0"
walkdir = "2.3.1"
